@@ -24,7 +24,7 @@
                 <SEQ TYPE="COMMENT1">/**/</SEQ>
 
                 <!-- Javadoc comment -->
-                <SPAN TYPE="COMMENT2" DELEGATE="JAVADOC">
+                <SPAN TYPE="COMMENT3" DELEGATE="java::JAVADOC">
                         <BEGIN>/**</BEGIN>
                         <END>*/</END>
                 </SPAN>
@@ -44,7 +44,7 @@
                         <END>'</END>
                 </SPAN>
 
-                <EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+                <EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
                 <SEQ TYPE="OPERATOR">=</SEQ>
                 <SEQ TYPE="OPERATOR">!</SEQ>
@@ -164,81 +164,4 @@
                         <KEYWORD4>..</KEYWORD4>
                 </KEYWORDS>
         </RULES>
-
-        <RULES SET="JAVADOC" DEFAULT="COMMENT2" IGNORE_CASE="TRUE">
-                <!-- so that @link{...} is highlighted -->
-                <SEQ TYPE="COMMENT2">{</SEQ>
-
-                <!-- so that *@param is highlighted -->
-                <SEQ TYPE="COMMENT2">*</SEQ>
-
-                <!-- Javadoc ignores tags inside <pre> -->
-                <SPAN TYPE="MARKUP" DELEGATE="JAVADOC_PRE">
-                        <BEGIN>&lt;pre&gt;</BEGIN>
-                        <END>&lt;/pre&gt;</END>
-                </SPAN>
-
-                <!-- HTML comments -->
-                <SPAN TYPE="COMMENT1">
-                        <BEGIN>&lt;!--</BEGIN>
-                        <END>--&gt;</END>
-                </SPAN>
-
-                <!-- Javadoc allows this -->
-                <SEQ TYPE="COMMENT2">&lt;&lt;</SEQ>
-                <SEQ TYPE="COMMENT2">&lt;=</SEQ>
-                <SEQ TYPE="COMMENT2">&lt; </SEQ>
-
-                <!-- HTML tags -->
-                <SPAN TYPE="MARKUP" DELEGATE="xml::TAGS">
-                        <BEGIN>&lt;</BEGIN>
-                        <END>&gt;</END>
-                </SPAN>
-
-                <KEYWORDS>
-                        <LABEL>@author</LABEL>
-                        <LABEL>@beaninfo</LABEL>
-                        <LABEL>@history</LABEL>
-                        <LABEL>@bug</LABEL>
-                        <LABEL>@review</LABEL>
-                        <LABEL>@todo</LABEL>
-                        <LABEL>@idea</LABEL>
-                        <LABEL>@pre</LABEL>
-                        <LABEL>@requires</LABEL>
-                        <LABEL>@post</LABEL>
-                        <LABEL>@ensures</LABEL>
-                        <LABEL>@generates</LABEL>
-                        <LABEL>@modifies</LABEL>
-                        <LABEL>@invariant</LABEL>
-                        <LABEL>@exception</LABEL>
-                        <LABEL>@hides</LABEL>
-                        <LABEL>@overrides</LABEL>
-                        <LABEL>@equivalent</LABEL>
-                        <LABEL>@bon</LABEL>
-                        <LABEL>@access</LABEL>
-                        <LABEL>@example</LABEL>
-                        <LABEL>@design</LABEL>
-                        <LABEL>@serial</LABEL>
-                        <LABEL>@references</LABEL>
-                        <LABEL>@uses</LABEL>
-                        <LABEL>@guard</LABEL>
-                        <LABEL>@values</LABEL>
-                        <LABEL>@complexity</LABEL>
-                        <LABEL>@deprecated</LABEL>
-                        <LABEL>@docRoot</LABEL>
-                        <LABEL>@exception</LABEL>
-                        <LABEL>@link</LABEL>
-                        <LABEL>@param</LABEL>
-                        <LABEL>@return</LABEL>
-                        <LABEL>@see</LABEL>
-                        <LABEL>@serialData</LABEL>
-                        <LABEL>@serialField</LABEL>
-                        <LABEL>@since</LABEL>
-                        <LABEL>@throws</LABEL>
-                        <LABEL>@version</LABEL>
-                        <LABEL>@spec</LABEL>
-                </KEYWORDS>
-        </RULES>
-
-        <RULES SET="JAVADOC_PRE" DEFAULT="COMMENT2" />
 </MODE>
