@@ -26,7 +26,7 @@
 			<BEGIN>/*</BEGIN>
 			<END>*/</END>
 		</SPAN>
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
 		<!--String Literals -->
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE">
